  * Add RankingAlgorithm search engine support (nnagarajayya).
  * Limit the number of recent changes loaded by the "Reload Recent Changes"
    task on the Special:Maintenance page to improve performance.
  * Include common virtual wiki and interwiki options on both the Special:Admin
    and Special:VirtualWiki pages.  Requested by floatingworld.
  * Upgrade to HSQLDB 2.2.4.
  * Upgrade to Lucene Search 3.3.
  * Upgrade to Ehcache 2.4.2.
  * Upgrade to commons-codec 1.5.
  * Upgrade to commons-lang 2.6.
  * Upgrade to commons-pool 1.5.6.

Bugfixes:

  * Interwiki link CSS should match internal link CSS, not external link CSS,
    and if no link text is specified the default text should display the
    interwiki prefix.  Reported by floatingworld.
  * Fix category redirects of the form "#REDIRECT [[Category:Example]]".
  * Custom authentication providers did not work during upgrades.  Reported by
    Torsten Krah.
  * Fix a CSS problem which caused the footer to overlap the left nav on short
    pages.
  * The "name" attribute for anchors has been deprecated in HTML 5 / XHTML.
  * When a topic link is created in a case-insensitive way, such as "[[topic]]"
    when the actual topic name is "Topic", Special:OrphanedPages and
    Special:LinkTo will now recognize the link as being to the target topic.
  * Comments on their own lines should be completely removed when parsing and
    not treated as blank lines in order to match Mediawiki behavior.
  * Display a "no items found" message on pages such as Special:Categories and
    Special:AllPages when there are no items available for display.

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


1.0.5
=====

New Features:

  * Updated spam filter patterns.

Bugfixes:

  * Fix an issue that broke the TOC for some browsers when using non-Latin
    characters.  Reported by by Felipe Avilis.
  * Fix an issue where parsing multiple pages at the same time could generate